[gd_scene load_steps=39 format=4 uid="uid://gw1deo5b6a80"]

[ext_resource type="Script" uid="uid://le1m5fskmtws" path="res://levels.gd" id="1_7mycd"]
[ext_resource type="Texture2D" uid="uid://dh5kwc8knqabt" path="res://grasses.png" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://bypj6vdt18ojq" path="res://catsup.png" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://cqe231x0xi0g0" path="res://controls.gd" id="2_h2yge"]
[ext_resource type="Texture2D" uid="uid://bacbklerpsxsx" path="res://particle2.png" id="4_yaehf"]
[ext_resource type="Texture2D" uid="uid://25i0tjf5nrky" path="res://circle_dithered.png" id="5_272bh"]
[ext_resource type="Script" uid="uid://b1nvr1rfuyunm" path="res://scoreboard_v1.gd" id="6_5vw27"]
[ext_resource type="PackedScene" uid="uid://b8ia2bfu3sq43" path="res://boorunum.tscn" id="7_2cqfq"]
[ext_resource type="Texture2D" uid="uid://onl8rjhdoea8" path="res://circle_outline.png" id="7_4c57u"]
[ext_resource type="PackedScene" uid="uid://sdeyu187uwgp" path="res://ai_basic.tscn" id="8_5vw27"]
[ext_resource type="Texture2D" uid="uid://ds65ih28p4bgq" path="res://buildings/michael_alone.png" id="8_dg77c"]
[ext_resource type="Texture2D" uid="uid://jdg8o1mlu1ty" path="res://bg_plants.png" id="9_kek77"]
[ext_resource type="PackedScene" uid="uid://d2bimgfc61e10" path="res://ai_flight.tscn" id="11_efxa6"]
[ext_resource type="Texture2D" uid="uid://b0ocotengvfi0" path="res://buildings/clouds1.png" id="14_vivmo"]
[ext_resource type="Texture2D" uid="uid://blmdtlejwib6v" path="res://buildings/michael_sign.png" id="14_w48qg"]
[ext_resource type="Texture2D" uid="uid://70hi25utw0ck" path="res://buildings/clouds2.png" id="15_vivmo"]
[ext_resource type="PackedScene" uid="uid://diuhgdp0jn67r" path="res://circle_coin.tscn" id="18_074og"]
[ext_resource type="PackedScene" uid="uid://d3e17qciau570" path="res://jumppad.tscn" id="19_82xsv"]
[ext_resource type="PackedScene" uid="uid://c4w5ovqkqoy74" path="res://tomato_coin.tscn" id="19_cegan"]
[ext_resource type="Texture2D" uid="uid://tqphs85miap7" path="res://arrow.png" id="20_getpj"]
[ext_resource type="Script" uid="uid://f2j2dcghn8wl" path="res://move_along_path.gd" id="21_ryguw"]
[ext_resource type="Texture2D" uid="uid://d1n8fneirurnl" path="res://basket.png" id="22_d13ii"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ig7tw"]
texture = ExtResource("1_ig7tw")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0

[sub_resource type="TileSet" id="TileSet_0xm2m"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ig7tw")

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_h2yge"]
friction = 0.7

[sub_resource type="Gradient" id="Gradient_yaehf"]
offsets = PackedFloat32Array(0, 0.175)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_074og"]
gradient = SubResource("Gradient_yaehf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_074og"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_074og")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_efxa6"]
radius = 15.0
height = 45.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(33.75, 6.75)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4c57u"]
texture = ExtResource("9_kek77")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_efxa6"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_4c57u")

[sub_resource type="Curve2D" id="Curve2D_1u8w0"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -81, 0, 0, 0, 0, 0, 98)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryguw"]
size = Vector2(12.034485, 201.82072)

[sub_resource type="Animation" id="Animation_d13ii"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ryguw"]
resource_name = "new_animation"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1u8w0"]
_data = {
&"RESET": SubResource("Animation_d13ii"),
&"new_animation": SubResource("Animation_ryguw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d13ii"]
size = Vector2(23.147766, 53)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_7mycd")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAHAA8AAAACAAAAAAAIAA8AAAACAAAAAAAJAA8AAAACAAAAAAAKAA8AAAACAAAAAAAGAA8AAAAAAAAAAAAOAA0AAAAAAAAAAAAPAA0AAAACAAAAAAAQAA0AAAACAAAAAAARAA0AAAACAAAAAAASAA0AAAACAAAAAAAWAAoAAAAAAAAAAAAXAAoAAAACAAAAAAAYAAoAAAACAAAAAAAZAAoAAAACAAAAAAAaAAoAAAACAAAAAAAbAAoAAAACAAAAAAAcAAoAAAACAAAAAAAdAAoAAAABAAAAAAATAA0AAAABAAAAAAALAA8AAAABAAAAAAATABIAAAAAAAAAAAAUABIAAAACAAAAAAAVABIAAAACAAAAAAAWABIAAAACAAAAAAAXABIAAAACAAAAAAAYABIAAAABAAAAAAAPABIAAAACAAAAAAAOABIAAAACAAAAAAANABIAAAAAAAAAAAD8/xcAAAACAAAAAAD9/xcAAAACAAAAAAD+/xcAAAACAAAAAAD//xcAAAACAAAAAAAAABcAAAACAAAAAAABABcAAAACAAAAAAACABcAAAACAAAAAAD9/xQAAAABAAAAAAD2/xQAAAAAAAAAAAD3/xQAAAACAAAAAAD4/xQAAAACAAAAAAD5/xQAAAACAAAAAAD6/xQAAAACAAAAAAD7/xQAAAACAAAAAAD8/xQAAAACAAAAAAACABEAAAABAAAAAAABABEAAAAAAAAAAAD9/wYAAAAAAAAAAAD+/wYAAAACAAAAAAD//wYAAAACAAAAAAAAAAYAAAACAAAAAAABAAYAAAACAAAAAAACAAYAAAACAAAAAAADAAYAAAABAAAAAAD2/wYAAAABAAAAAAD1/wYAAAACAAAAAAD0/wYAAAACAAAAAADz/wYAAAACAAAAAADy/wYAAAACAAAAAADx/wYAAAACAAAAAADw/wYAAAACAAAAAADv/wYAAAACAAAAAADu/wYAAAACAAAAAADt/wYAAAACAAAAAADs/wYAAAAAAAAAAADt/wIAAAABAAAAAADs/wIAAAACAAAAAADr/wIAAAACAAAAAADq/wIAAAACAAAAAADp/wIAAAAAAAAAAADY/xAAAAAAAAAAAADZ/xAAAAACAAAAAADa/xAAAAACAAAAAADb/xAAAAACAAAAAADc/xAAAAACAAAAAADd/xAAAAACAAAAAADe/xAAAAABAAAAAAAhABcAAAACAAAAAAAiABcAAAACAAAAAAAjABcAAAACAAAAAAAkABcAAAACAAAAAAAlABcAAAACAAAAAAAmABcAAAACAAAAAAAnABcAAAACAAAAAAAoABcAAAACAAAAAAApABcAAAACAAAAAAAqABcAAAACAAAAAAA7ABAAAAAAAAAAAAA8ABAAAAACAAAAAAA9ABAAAAACAAAAAAA+ABAAAAACAAAAAAA/ABAAAAABAAAAAAA2ABQAAAABAAAAAAA1ABQAAAACAAAAAAA0ABQAAAACAAAAAAAzABQAAAACAAAAAAAyABQAAAACAAAAAAAxABQAAAACAAAAAAAwABQAAAAAAAAAAAADABcAAAABAAAAAAD7/xcAAAAAAAAAAAAjAAYAAAACAAAAAAAkAAYAAAACAAAAAAAlAAYAAAACAAAAAAAmAAYAAAACAAAAAAAnAAYAAAABAAAAAAAiAAYAAAAAAAAAAABVAPj/AAADAAAAAABWAPj/AAADAAAAAABXAPj/AAADAAAAAABYAPj/AAADAAAAAABZAPj/AAADAAAAAABaAPj/AAADAAAAAABYABIAAAAAAAAAAABZABIAAAACAAAAAABaABIAAAACAAAAAABbABIAAAACAAAAAABcABIAAAACAAAAAABdABIAAAACAAAAAABeABIAAAABAAAAAABDABUAAAAAAAAAAABEABUAAAACAAAAAABFABUAAAABAAAAAABOAA8AAAAAAAAAAABPAA8AAAACAAAAAABQAA8AAAABAAAAAABJABIAAAAAAAAAAABKABIAAAABAAAAAACOAP7/AAADAAAAAACPAP7/AAADAAAAAACQAP7/AAADAAAAAACRAP7/AAADAAAAAACSAP7/AAADAAAAAACTAP7/AAADAAAAAACUAP7/AAADAAAAAACVAP7/AAADAAAAAACWAP7/AAADAAAAAAA=")
tile_set = SubResource("TileSet_0xm2m")

[node name="Player" type="RigidBody2D" parent="."]
position = Vector2(344, 459)
physics_material_override = SubResource("PhysicsMaterial_h2yge")
lock_rotation = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("2_h2yge")
metadata/speed = 10.0
metadata/jump = 250.0
metadata/health = 10.0
metadata/power = 7.0
metadata/inair = true
metadata/sides_touched = false
metadata/score = 0

[node name="GPUParticles2D" type="GPUParticles2D" parent="Player"]
position = Vector2(-7.6293945e-06, 20.999992)
scale = Vector2(0.291, 0.1)
amount = 750
texture = ExtResource("4_yaehf")
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_074og")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
rotation = 3.1415927
shape = SubResource("CapsuleShape2D_efxa6")

[node name="Catsup" type="Sprite2D" parent="Player"]
scale = Vector2(1.35, 1.35)
texture = ExtResource("2_0xm2m")

[node name="sides" type="Area2D" parent="Player"]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Player/sides"]
position = Vector2(0, -21.75)
shape = SubResource("RectangleShape2D_1bvp3")
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player/sides"]
position = Vector2(-14, -2.875)
rotation = -1.5707964
shape = SubResource("RectangleShape2D_1bvp3")
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Player/sides"]
position = Vector2(14, -3)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_1bvp3")
one_way_collision = true

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="CircleDithered" type="Sprite2D" parent="Player/Camera2D"]
visibility_layer = 2
z_index = 1
position = Vector2(456, -204.00002)
scale = Vector2(2.5, 2.5)
texture = ExtResource("5_272bh")

[node name="scoreboard" type="Label" parent="Player/Camera2D/CircleDithered"]
offset_left = -96.0
offset_top = -48.0
offset_right = 96.0
offset_bottom = 48.0
text = "6-7"
script = ExtResource("6_5vw27")
metadata/_edit_use_anchors_ = true

[node name="Boorunum" parent="Player/Camera2D/CircleDithered" instance=ExtResource("7_2cqfq")]
scale = Vector2(0.39999998, 0.39999998)

[node name="CircleOutline" type="Sprite2D" parent="Player/Camera2D"]
modulate = Color(1, 1, 1, 0.5764706)
z_index = 2
position = Vector2(456, -205)
scale = Vector2(2.5, 2.5)
texture = ExtResource("7_4c57u")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="AI_basic2" parent="." instance=ExtResource("8_5vw27")]
position = Vector2(456, 554)
metadata/damage = 1.0

[node name="AI_basic" parent="." instance=ExtResource("8_5vw27")]
position = Vector2(543, 394)
metadata/damage = 1.0

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAHAA4AAAAAAAAAAAATAAwAAAAAAAAAAAAYAAkAAAAAAAAAAAABAAUAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_efxa6")

[node name="AI_basic3" parent="." instance=ExtResource("11_efxa6")]
position = Vector2(-204, 593)
collision_layer = 64
gravity_scale = 0.0

[node name="AI_basic4" parent="." instance=ExtResource("11_efxa6")]
position = Vector2(-656, 13)
collision_layer = 64
gravity_scale = 0.0

[node name="AI_basic5" parent="." instance=ExtResource("11_efxa6")]
position = Vector2(1199, 564)
collision_layer = 64
gravity_scale = 0.0

[node name="AI_basic6" parent="." instance=ExtResource("11_efxa6")]
position = Vector2(1591, 422)
collision_layer = 64
gravity_scale = 0.0

[node name="AI_basic10" parent="." instance=ExtResource("11_efxa6")]
position = Vector2(2472, 726)
collision_layer = 64
gravity_scale = 0.0

[node name="AI_basic11" parent="." instance=ExtResource("11_efxa6")]
position = Vector2(1943, 601)
collision_layer = 64
gravity_scale = 0.0

[node name="AI_basic12" parent="." instance=ExtResource("11_efxa6")]
position = Vector2(2309, 412)
collision_layer = 64
gravity_scale = 0.0

[node name="AI_basic13" parent="." instance=ExtResource("11_efxa6")]
position = Vector2(2317, -448)
collision_layer = 64
gravity_scale = 0.0

[node name="AI_basic14" parent="." instance=ExtResource("11_efxa6")]
position = Vector2(3404, 119)
collision_layer = 64
gravity_scale = 0.0

[node name="AI_basic15" parent="." instance=ExtResource("11_efxa6")]
position = Vector2(4557, -247)
collision_layer = 64
gravity_scale = 0.0

[node name="AI_basic16" parent="." instance=ExtResource("11_efxa6")]
position = Vector2(4811, -328)
collision_layer = 64
gravity_scale = 0.0

[node name="AI_basic17" parent="." instance=ExtResource("11_efxa6")]
position = Vector2(4993, -82)
collision_layer = 64
gravity_scale = 0.0

[node name="bg" type="Node2D" parent="."]
z_index = -1

[node name="buildings" type="Parallax2D" parent="bg"]
scroll_scale = Vector2(0.7, 1)
repeat_size = Vector2(1500, 0)
repeat_times = 2

[node name="MichaelAlone" type="Sprite2D" parent="bg/buildings"]
z_index = -1
position = Vector2(150, 545)
scale = Vector2(3, 3)
texture = ExtResource("8_dg77c")
metadata/pos_z = 25.0

[node name="signs" type="Parallax2D" parent="bg"]
scroll_scale = Vector2(0.75, 1)
repeat_size = Vector2(1500, 0)
repeat_times = 2

[node name="MichaelSign" type="Sprite2D" parent="bg/signs"]
position = Vector2(-151, 635)
texture = ExtResource("14_w48qg")

[node name="messyclouds" type="Parallax2D" parent="bg"]
scroll_scale = Vector2(0.8, 1)
repeat_size = Vector2(1500, 0)
repeat_times = 2

[node name="Clouds2" type="Sprite2D" parent="bg/messyclouds"]
position = Vector2(108, 708)
texture = ExtResource("14_vivmo")

[node name="Clouds3" type="Sprite2D" parent="bg/messyclouds/Clouds2"]
position = Vector2(-128, 35)
texture = ExtResource("14_vivmo")

[node name="Clouds4" type="Sprite2D" parent="bg/messyclouds/Clouds2"]
position = Vector2(94, 64)
texture = ExtResource("14_vivmo")

[node name="Clouds5" type="Sprite2D" parent="bg/messyclouds/Clouds2"]
position = Vector2(257, 38)
texture = ExtResource("14_vivmo")

[node name="Clouds6" type="Sprite2D" parent="bg/messyclouds/Clouds2"]
position = Vector2(392, 95)
texture = ExtResource("14_vivmo")

[node name="Clouds7" type="Sprite2D" parent="bg/messyclouds/Clouds2"]
position = Vector2(478, 48)
texture = ExtResource("14_vivmo")

[node name="Clouds8" type="Sprite2D" parent="bg/messyclouds/Clouds2"]
position = Vector2(605, 100)
texture = ExtResource("14_vivmo")

[node name="Clouds9" type="Sprite2D" parent="bg/messyclouds/Clouds2"]
position = Vector2(701, 46)
texture = ExtResource("14_vivmo")

[node name="Clouds10" type="Sprite2D" parent="bg/messyclouds/Clouds2"]
position = Vector2(805, 119)
texture = ExtResource("14_vivmo")

[node name="Clouds11" type="Sprite2D" parent="bg/messyclouds/Clouds2"]
position = Vector2(906, 59)
texture = ExtResource("14_vivmo")

[node name="Clouds12" type="Sprite2D" parent="bg/messyclouds/Clouds2"]
position = Vector2(1046, 134)
texture = ExtResource("14_vivmo")

[node name="Clouds13" type="Sprite2D" parent="bg/messyclouds/Clouds2"]
position = Vector2(1176, 93)
texture = ExtResource("14_vivmo")

[node name="Clouds14" type="Sprite2D" parent="bg/messyclouds/Clouds2"]
position = Vector2(465, 145)
texture = ExtResource("14_vivmo")

[node name="Clouds15" type="Sprite2D" parent="bg/messyclouds/Clouds2"]
position = Vector2(-178, 174)
texture = ExtResource("14_vivmo")

[node name="Clouds16" type="Sprite2D" parent="bg/messyclouds/Clouds2"]
position = Vector2(-2, 200)
texture = ExtResource("14_vivmo")

[node name="Clouds1" type="Sprite2D" parent="bg/messyclouds/Clouds2"]
position = Vector2(-143, -10)
texture = ExtResource("14_vivmo")

[node name="Clouds3" type="Sprite2D" parent="bg/messyclouds"]
position = Vector2(198.5, 1009.5)
scale = Vector2(1.9277344, 1.4003906)
texture = ExtResource("15_vivmo")

[node name="Clouds4" type="Sprite2D" parent="bg/messyclouds"]
position = Vector2(772, 1056)
scale = Vector2(1.9277344, 1.4003906)
texture = ExtResource("15_vivmo")

[node name="Clouds5" type="Sprite2D" parent="bg/messyclouds"]
position = Vector2(-469.00003, 1038)
scale = Vector2(1.9277344, 1.4003906)
texture = ExtResource("15_vivmo")

[node name="CircleCoin" parent="." instance=ExtResource("18_074og")]
position = Vector2(-1113, 481.00003)

[node name="CircleCoin2" parent="." instance=ExtResource("18_074og")]
position = Vector2(-1234, 481)

[node name="CircleCoin3" parent="." instance=ExtResource("18_074og")]
position = Vector2(67, 505)

[node name="CircleCoin4" parent="." instance=ExtResource("19_cegan")]
position = Vector2(-1176, 477)

[node name="Jumppad" parent="." instance=ExtResource("19_82xsv")]
position = Vector2(901, 312)

[node name="Jumppad2" parent="." instance=ExtResource("19_82xsv")]
position = Vector2(1122, 189)

[node name="Jumppad3" parent="." instance=ExtResource("19_82xsv")]
position = Vector2(1635, 157)

[node name="Jumppad4" parent="." instance=ExtResource("19_82xsv")]
position = Vector2(1873, 27)

[node name="Jumppad5" parent="." instance=ExtResource("19_82xsv")]
position = Vector2(2219, -76)

[node name="Jumppad6" parent="." instance=ExtResource("19_82xsv")]
position = Vector2(2510, -266)

[node name="Jumppad7" parent="." instance=ExtResource("19_82xsv")]
position = Vector2(3941, 387)

[node name="Arrow" type="Sprite2D" parent="."]
position = Vector2(2939, -287)
rotation = 1.5707964
scale = Vector2(2, 2)
texture = ExtResource("20_getpj")

[node name="AI_basic7" parent="." instance=ExtResource("8_5vw27")]
position = Vector2(2787, -279)

[node name="CircleCoin5" parent="." instance=ExtResource("19_cegan")]
position = Vector2(2872, -368)

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(3245, 597)
curve = SubResource("Curve2D_1u8w0")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(0, -81)
rotation = 1.2399516
rotates = false
cubic_interp = false
script = ExtResource("21_ryguw")

[node name="StaticBody2D" type="StaticBody2D" parent="Path2D/PathFollow2D"]
disable_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/StaticBody2D"]
position = Vector2(21.551819, 14.189484)
rotation = 0.3490659
shape = SubResource("RectangleShape2D_ryguw")

[node name="Basket" type="Sprite2D" parent="Path2D/PathFollow2D/StaticBody2D/CollisionShape2D"]
z_index = 1
position = Vector2(-25.105164, -5.9625854)
rotation = -1.5890175
scale = Vector2(1.9999999, 1.9999999)
texture = ExtResource("22_d13ii")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Path2D/PathFollow2D"]
libraries = {
&"": SubResource("AnimationLibrary_1u8w0")
}
speed_scale = 0.7

[node name="Path2D2" type="Path2D" parent="."]
position = Vector2(3681, 548)
curve = SubResource("Curve2D_1u8w0")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D2"]
position = Vector2(0, -81)
rotation = 1.2399516
rotates = false
cubic_interp = false
script = ExtResource("21_ryguw")

[node name="StaticBody2D" type="StaticBody2D" parent="Path2D2/PathFollow2D"]
disable_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D2/PathFollow2D/StaticBody2D"]
position = Vector2(21.551819, 14.189484)
rotation = 0.3490659
shape = SubResource("RectangleShape2D_ryguw")

[node name="Basket" type="Sprite2D" parent="Path2D2/PathFollow2D/StaticBody2D/CollisionShape2D"]
z_index = 1
position = Vector2(-25.105164, -5.9625854)
rotation = -1.5890175
scale = Vector2(1.9999999, 1.9999999)
texture = ExtResource("22_d13ii")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Path2D2/PathFollow2D"]
libraries = {
&"": SubResource("AnimationLibrary_1u8w0")
}
speed_scale = 0.8

[node name="Path2D3" type="Path2D" parent="."]
position = Vector2(4199, 109)
curve = SubResource("Curve2D_1u8w0")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D3"]
position = Vector2(0, -81)
rotation = 1.2399516
rotates = false
cubic_interp = false
script = ExtResource("21_ryguw")

[node name="StaticBody2D" type="StaticBody2D" parent="Path2D3/PathFollow2D"]
disable_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D3/PathFollow2D/StaticBody2D"]
position = Vector2(21.551819, 14.189484)
rotation = 0.3490659
shape = SubResource("RectangleShape2D_ryguw")

[node name="Basket" type="Sprite2D" parent="Path2D3/PathFollow2D/StaticBody2D/CollisionShape2D"]
z_index = 1
position = Vector2(-25.105164, -5.9625854)
rotation = -1.5890175
scale = Vector2(1.9999999, 1.9999999)
texture = ExtResource("22_d13ii")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Path2D3/PathFollow2D"]
libraries = {
&"": SubResource("AnimationLibrary_1u8w0")
}
speed_scale = 0.8

[node name="MichaelAlone" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(4728, -155)
texture = ExtResource("8_dg77c")

[node name="MichaelSign" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(4653, -164)
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_w48qg")

[node name="done" type="StaticBody2D" parent="."]
position = Vector2(4758, -84)
scale = Vector2(4.3199997, 1)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="done"]
position = Vector2(-0.46276855, -1.5)
shape = SubResource("RectangleShape2D_d13ii")

[connection signal="body_entered" from="Player" to="Player" method="_on_body_entered"]
[connection signal="body_exited" from="Player" to="Player" method="_on_body_exited"]
[connection signal="body_entered" from="Player/sides" to="Player" method="_on_sides_entered"]
[connection signal="body_exited" from="Player/sides" to="Player" method="_on_sides_exited"]
